[Window] fix resizeProxy, captureTabNavigation, title align position and rotate

--- a/src/Panel/style/base.scss
+++ b/src/Panel/style/base.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './title-rotate.scss';
 
 .#{$ZIPPY_PANEL_ROOT_CLASS} {
   display: flex;
@@ -38,57 +39,7 @@
   flex-direction: column-reverse;
 }
 
-.#{$ZIPPY_PANEL_ROOT_CLASS}--title-rotate-90.#{$ZIPPY_PANEL_ROOT_CLASS}--title-bar-position-right {
-  // position: relative;
-
-  .#{$ZIPPY_PANEL_ROOT_CLASS}__title-bar {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-bottom: 1px solid #a1b6d3;
-    transform-origin: top right;
-    transform: rotate(90deg) translateX(100%);
-  }
-}
-
-.#{$ZIPPY_PANEL_ROOT_CLASS}--title-rotate--90.#{$ZIPPY_PANEL_ROOT_CLASS}--title-bar-position-right {
-  // position: relative;
-
-  .#{$ZIPPY_PANEL_ROOT_CLASS}__title-bar {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-top: 1px solid #a1b6d3;
-    transform-origin: top right;
-    transform: rotate(-90deg) translateY(-100%);
-  }
-}
-
-.#{$ZIPPY_PANEL_ROOT_CLASS}--title-rotate--90.#{$ZIPPY_PANEL_ROOT_CLASS}--title-bar-position-left {
-  // position: relative;
-
-  .#{$ZIPPY_PANEL_ROOT_CLASS}__title-bar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-bottom: 1px solid #a1b6d3;
-    transform-origin: top left;
-    transform: rotate(-90deg) translateX(-100%);
-  }
-}
-
-.#{$ZIPPY_PANEL_ROOT_CLASS}--title-rotate-90.#{$ZIPPY_PANEL_ROOT_CLASS}--title-bar-position-left {
-  // position: relative;
-
-  .#{$ZIPPY_PANEL_ROOT_CLASS}__title-bar {
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    border-top: 1px solid #a1b6d3;
-    transform-origin: bottom left;
-    transform: rotate(90deg);
-  }
-}
+@include apply-title-rotate($ZIPPY_PANEL_ROOT_CLASS);
 
 .#{$ZIPPY_PANEL_ROOT_CLASS}__title {
   width: 100%;
